<resources>
    <string name="app_name">Weather App!!</string>

    <string name="action_settings">Settings</string>
    <string name="sync_button">Get Sync</string>
    <string name="async_button">Get Async</string>
    <string name="location_cannot_be_empty">The location cannot be empty!</string>
    <string name="weather_name">Name</string>
    <string name="weather_name_title">Name</string>
    <string name="weather_speed">Speed</string>
    <string name="weather_speed_title">Speed</string>
    <string name="weather_deg_title">Wind direction</string>
    <string name="weather_temperature">Temperature</string>
    <string name="weather_humidity">Humidity</string>
    <string name="weather_sunrise">Sunrise</string>
    <string name="weather_sunset_title">Sunset</string>
    <string name="sorry_no_data">Sorry no data was found.</string>
    <string name="from_cache">From cache!</string>
</resources>
